--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ roopsangamnx_backend/inventory/
 roopsangamnx_backend/payment_gateway/
 roopsangamnx_backend/__pycache__/
 roopsangamnx_backend/roopsangamnx_backend/__pycache__
+roopsangamnx_backend/staticfiles/
 *.log
 
 *.pot
