--- a/roopsangamnx_backend/vercel.json
+++ b/roopsangamnx_backend/vercel.json
@@ -21,7 +21,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "poll/wsgi.py"
+        "dest": "roopsangam_backend/wsgi.py"
       }
     ]
   }
