--- a/roopsangamnx_backend/vercel.json
+++ b/roopsangamnx_backend/vercel.json
@@ -3,8 +3,8 @@
     "builds": [
       {
         "src": "roopsangamnx_backend/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3" }
+        "use": "@vercel/python3.9",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build_files.sh",
