--- a/roopsangamnx_backend/vercel.json
+++ b/roopsangamnx_backend/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "roopsangamnx_backend/wsgi.py",
-        "use": "@vercel/python3.9",
+        "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
