--- a/roopsangamnx_backend/requirements.txt
+++ b/roopsangamnx_backend/requirements.txt
@@ -11,5 +11,5 @@ requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.11.0
 urllib3==2.2.1
-psycopg2-binary==2.9.6
+# psycopg2-binary==2.9.6
 python-dotenv==1.0.0
