--- a/roopsangamnx_backend/requirements.txt
+++ b/roopsangamnx_backend/requirements.txt
@@ -11,3 +11,8 @@ requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.11.0
 urllib3==2.2.1
+python-dotenv==1.0.1
+psycopg==3.1.19
+psycopg-binary==3.1.19
+Pillow==10.0.0
+
