Implement product, category, and subcategory filters; enhance view security
- Added filters for products to allow sorting by price range and availability.
- Introduced category filters to organize products into specific groups.
- Extended filtering capabilities to subcategories within each category.
- Implemented access controls to protect sensitive views from unauthorized access.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 *.pyc
 __pycache__/
 rsenv
-roopsangamnx_backend/*/migrations/
+roopsangamnx_backend/authentication/migrations/*
+roopsangamnx_backend/inventory/migrations/*
+roopsangamnx_backend/billing/migrations/*
+roopsangamnx_backend/db.sqlite3
+
 roopsangamnx_backend/__pycache__/
 gallery/
+roopsangamnx_backend/__pycache__/
+rsenv
 .env
 *.log
 *.pot
