--- a/roopsangamnx_backend/requirements.txt
+++ b/roopsangamnx_backend/requirements.txt
@@ -1,22 +1,32 @@
+appdirs==1.4.4
+argcomplete==3.5.0
 asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
+colorama==0.4.6
 Django==5.0.6
 django-cors-headers==4.3.1
 django-environ==0.11.2
+django-filter==24.2
+django-unfold==0.39.0
 djangorestframework==3.15.1
 idna==3.7
-razorpay==1.4.2
-requests==2.32.3
-sqlparse==0.5.0
-typing_extensions==4.11.0
-urllib3==2.2.1
-python-dotenv==1.0.1
+importlib_resources==6.4.5
+Pillow==10.0.0
 psycopg==3.1.19
 psycopg-binary==3.1.19
-Pillow==10.0.0
-whitenoise==6.6.0
+pypng==0.20220715.0
+python-barcode==0.15.1
+python-dotenv==1.0.1
+python-escpos==3.1
+PyYAML==6.0.2
+qrcode==7.4.2
+razorpay==1.4.2
+requests==2.32.3
 setuptools==59.6.0
-django-filter==24.2
-python-dotenv
-python-escpos
+six==1.16.0
+sqlparse==0.5.0
+typing_extensions==4.11.0
+tzdata==2024.2
+urllib3==2.2.1
+whitenoise==6.6.0
